<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/forestFragment">

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.qcgm1978.forest.settings.SettingsFragment"
        android:label="@string/settings" />

    <fragment
        android:id="@+id/progressFragment"
        android:name="com.qcgm1978.forest.progress.ProgressFragment"
        android:label="@string/tree"
        tools:layout="@layout/fragment_progress" />

    <fragment
        android:id="@+id/statsFragment"
        android:name="com.qcgm1978.forest.stats.StatsFragment"
        android:label="@string/stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/forestFragment"
        android:name="com.qcgm1978.forest.trees.ForestFragment"
        android:label="@string/forest"
        tools:layout="@layout/fragment_forest" />

    <fragment
        android:id="@+id/standTimeFragment"
        android:name="com.qcgm1978.forest.standtime.StandTimeFragment"
        android:label="@string/stand_time"
        tools:layout="@layout/fragment_stand_time" />

    <fragment
        android:id="@+id/balanceFragment"
        android:name="com.qcgm1978.forest.balance.BalanceFragment"
        android:label="@string/balance"
        tools:layout="@layout/fragment_balance" />

</navigation>